--- a/config/config.default.yaml
+++ b/config/config.default.yaml
@@ -83,8 +83,15 @@ countries:
 uk_settings:
   remove_ireland: true
 
-local_co2:
-  GB: {2025: 1.0}
+local_co2: # false or dict
+  # countries listed here does not commit to the co2_budget targets
+  GB:
+    2025: 1.0
+    2030: 1.0
+    2035: 1.0
+    2040: 1.0
+    2045: 1.0
+    2050: 1.0
 
 # docs in https://pypsa-eur.readthedocs.io/en/latest/configuration.html#snapshots
 snapshots:
@@ -953,7 +960,7 @@ clustering:
   mode: busmap
   administrative:
     level: 1
-  focus_weights: false
+  focus_weights: {'GB':0.8}
   copperplate_regions: []
   build_bidding_zones:
     remove_islands: false
