add transport of methanol

--- a/config/config.default.yaml
+++ b/config/config.default.yaml
@@ -140,7 +140,7 @@ electricity:
     H2: 168
 
   extendable_carriers:
-    Generator: [solar, solar-hsat, onwind, offwind-ac, offwind-dc, offwind-float, OCGT, CCGT]
+    Generator: [solar, solar-hsat, onwind, offwind-ac, offwind-dc, offwind-float, OCGT, CCGT, nuclear]
     StorageUnit: [] # battery, H2
     Store: [battery, H2]
     Link: [] # H2 pipeline
@@ -721,7 +721,7 @@ sector:
   co2_sequestration_cost: 30
   co2_sequestration_lifetime: 50
   co2_spatial: true
-  co2_network: true
+  co2_network: false
   co2_network_cost_factor: 1
   cc_fraction: 0.9
   hydrogen_underground_storage: true
@@ -730,7 +730,9 @@ sector:
   - nearshore      # within 50 km of sea
     # - offshore
   methanol:
-    regional_methanol_demand: false
+    regional_methanol_demand: true
+    transport: true
+    transport_cost: 0.027 # assumed price in "Minimal methanol paper" by P Glaum et al.
     methanol_reforming: false
     methanol_reforming_cc: false
     methanol_to_kerosene: false
