--- a/config/plotting.default.yaml
+++ b/config/plotting.default.yaml
@@ -5,12 +5,13 @@
 # docs in https://pypsa-eur.readthedocs.io/en/latest/configuration.html#plotting
 plotting:
   map:
-    boundaries: [-11, 30, 34, 71]
+    boundaries: [-10, 3, 49, 61]
     color_geomap:
       ocean: white
       land: white
   projection:
-    name: "EqualEarth"
+    name: "epsg"
+    code: 3035
     # See https://scitools.org.uk/cartopy/docs/latest/reference/projections.html for alternatives, for example:
     # name: "LambertConformal"
     # central_longitude: 10.
